2012-03-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	godmode/reporting/reporting_builder.php
	operation/reporting/reporting_viewer.php: Improve the intervals
	form into the html report view, fix the order of the from-to
	dates in the report items header and improve navegavility
	deleting preview section in godmode and replacing 
	it by a link to operation

2012-03-20 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: now the function
	"html_print_input_text_extended" accept a script code as string for event
	"keyup" or as array where the index is string for each event where you want
	add javascript code. And make more pretty the page of report and cleaned
	source code style. 

	* include/functions_reporting.php,
	godmode/reporting/reporting_builder.list_items.php,
	godmode/reporting/reporting_builder.php: changed the old method to order
	items in a report for the method with checks and move the block of items.

	* godmode/reporting/reporting_builder.preview.php: removed this file, now
	it use the html view in operation. 

2012-03-20  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora.js
	include/functions_visual_map.php
	operation/visual_console/render_view.php
	operation/visual_console/public_console.php
	godmode/reporting/visual_console_builder.wizard.php
	godmode/reporting/visual_console_builder.php
	godmode/reporting/visual_console_builder.editor.js
	godmode/reporting/visual_console_builder.elements.php
	godmode/reporting/visual_console_builder.preview.php
	godmode/reporting/visual_console_builder.editor.php: Change the
	period control to advanced control in all the visual map sections.
	Improve the navegavility in visual map sections.
	Merged from trunk

2012-03-16  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora.js: Fix a typo bug
	of last commit

2012-03-16  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	include/javascript/pandora.js